Thu Jul  8 16:53:06 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantSourceGenerator.cpp:
        
          Moved the call to populate_port_tables() from the
          component servant constructor to the end of
          the ciao_postactivate() method in the component servant,
          but it is commented out for now until related issues
          in DaNCe are resolved.

Thu Jul  8 16:46:55 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp:
        * DAnCE/ciao/NodeApp_CB_Impl.cpp:
        * DAnCE/ciao/NodeApp_CB_Impl.h:

          Fixing build errors.

Thu Jul  8 16:30:48 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/ciao/NodeApplication_Impl.cpp:

          Made changes to fix emulated build errors.

Wed Jul  7 21:52:24 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* docs/releasenotes/index.html:

	  Revamped to provide a new look. Has updated information. The
	  notes are missing a link to dance.html which should have
	  information about DAnCE. Tao will take care of that.

Wed Jul  7 15:04:37 2004  Venkita Subramonian  <venkita@cs.wustl.edu>

	* examples/OEP/BasicSP/descriptors/test.rtd:
	* examples/OEP/BasicSP/descriptors/svcmap.dat:
	* examples/OEP/BasicSP/descriptors/RTsvc.conf:
	* examples/OEP/BasicSP/descriptors/BasicSP-rt.cad:

	  Added these files to be used in RT version of BasicSP.

	* examples/OEP/BasicSP/NOTE.txt:

	  Updated notes on how to run with RTComponentServer.

Wed Jul  7 14:35:33 2004  Venkita Subramonian  <venkita@cs.wustl.edu>

	* docs/static_ciao_contents.html:
	* docs/static_config_example.html:
	* docs/static_config_rtexample.html:

	  Updated documentation for CIAO Static configurator.

Wed Jul  7 12:22:04 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/RepositoryManager/RepositoryManager_Impl.cpp:
        * DAnCE/RepositoryManager/RepositoryManager_Impl.h: